# rust_server_with_postgres

./: .gitignore  Cargo.toml  README.md  enums.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: api.rs  auth.rs  database.rs  dto.rs  lib.rs  main.rs  models.rs  repository.rs  server.rs
src/entities/: mod.rs  post.rs  prelude.rs  profile.rs  sea_orm_active_enums.rs  user.rs
