[package]
name = "crud_from_prisma"
version = "0.1.0"
edition = "2021"

[lib]
name = "crud_from_prisma"
path = "src/lib.rs"

[[bin]]
name = "crud_from_prisma"
path = "src/main.rs"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11.5"
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json"] }
dotenv = "0.15"
tokio = { version = "1.41.1", features = ["full"] }
jsonwebtoken = "9.3.0"
futures = "0.3"

[workspace]
members = [".", "migration"]