[package]
name = "rust-postgres-server"
version = "0.1.0"
edition = "2021"
description = "A robust CRUD API server built with Rust and PostgreSQL"
default-run = "rust-postgres-server"

[lib]
name = "rust_postgres_server"
path = "src/lib.rs"

[[bin]]
name = "rust-postgres-server"
path = "src/main.rs"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11.5"
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json"] }
dotenv = "0.15"
tokio = { version = "1.41.1", features = ["full"] }
jsonwebtoken = "9.3.0"
futures = "0.3"
num_cpus = "1.16"

[workspace]
members = [".", "migration"]