[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1.13.0", features = ["attributes", "tokio1"] }
sea-orm-migration = { version = "0.12", features = [ "runtime-tokio-rustls", "sqlx-postgres" ] }
tokio = { version = "1.41.1", features = ["full"] }
